@@ -1,7 +1,7 @@
 dnl AC_INIT does not take a macro as a version nr: set it separately! - Bram
-AC_INIT([ODE],[0.11],[ode@ode.org])
+AC_INIT([ODE],[0.11.1],[ode@ode.org])
 # AC_CONFIG_SRCDIR([ode/src/ode.cpp])
-ODE_RELEASE=0.11
+ODE_RELEASE=0.11.1
 AC_SUBST(ODE_RELEASE)
 
 # Those are instructions from the Libtool manual:
@@ -236,16 +236,16 @@ dnl test if we will build demos
 AM_CONDITIONAL(ENABLE_DEMOS, test x$enable_demos = xyes)
 
 
-dnl Check if the user wants the new timesh collider
-new_trimesh=no
-AC_ARG_ENABLE([new-trimesh], AS_HELP_STRING([--enable-new-trimesh],[enable use of the new trimesh collider]),
-        [new_trimesh=$enableval]
+dnl Check if the user wants the old timesh collider
+old_trimesh=no
+AC_ARG_ENABLE([old-trimesh], AS_HELP_STRING([--enable-old-trimesh],[enable use of the old trimesh collider]),
+        [old_trimesh=$enableval]
         )
-if test x$new_trimesh = xyes -a $trimesh = opcode; then
-        AC_DEFINE(dTRIMESH_OPCODE_USE_NEW_TRIMESH_TRIMESH_COLLIDER, 1,
-                [Use an alternative trimesh-trimesh collider which should yield better results])
+if test x$old_trimesh = xyes -a $trimesh = opcode; then
+        AC_DEFINE(dTRIMESH_OPCODE_USE_OLD_TRIMESH_TRIMESH_COLLIDER, 1,
+                [Use the old trimesh-trimesh collider])
 else
-        new_trimesh=no
+        old_trimesh=no
 fi
 
 
@@ -448,7 +448,7 @@ echo "  Use OPCODE:              $opcode"
 echo "  Use GIMPACT:             $gimpact"
 echo "  Is target a Pentium:     $pentium"
 echo "  Is target x86-64:        $cpu64"
-echo "  Use new opcode trimesh collider: $new_trimesh"
+echo "  Use old opcode trimesh collider: $old_trimesh"
 echo "  TLS for global data:     $use_ou"
 echo "  Enable debug error check: $asserts"
 echo "  Headers will be installed in $includedir/ode"
