@@ -8,6 +8,10 @@ the rules for this file:
   * keep the format consistent (79 char width, M/D/Y date format).
 
 ------------------------------------------------------------------------------
+05/24/09 Daniel K. O.
+
+		* Made the new trimesh collider the default.
+
 05/18/09 Oleh Derevenko
 
 		* Heightfield rotation fixed to avoid NaNs while rotating infinite 
